Update title and content in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ryaanu's 2-Year CS Roadmap</title>
+  <title>ryaanu's 2-Year CS Roadmap</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -193,8 +193,8 @@
 <body>
 
 <header>
-  <h1>Ryaanu's 2-Year CS Roadmap</h1>
-  <p>A calm, strategic checklist from the end of Class 10 to CS admissions in Europe, the US, and India.</p>
+  <h1>ryaanu's 2-Year CS Roadmap</h1>
+  <p>i just want out of india man 😭</p>
 </header>
 
 <div class="progress-wrap">
@@ -228,7 +228,7 @@
 </section>
 
 <footer>
-  Built for long-term consistency, not burnout. 🚀
+  made by ryaanu ofc fire fire pls hire (me)
 </footer>
 
 <script>
